helm/eyeos/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eyeos
  namespace: eyeos
spec:
  selector:
    app: eyeos
  type: ClusterIP
  ports:
  - name: vnc
    port: 5900
    targetPort: 5900
    protocol: TCP
  - name: web-vnc
    port: 6080
    targetPort: 6080
    protocol: TCP
  - name: ssh
    port: 2222
    targetPort: 2222
    protocol: TCP
  - name: webdav
    port: 8080
    targetPort: 8080
    protocol: TCP
  - name: ios-debug
    port: 9221
    targetPort: 9221
    protocol: TCP
